--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
     justify-content: flex-start;
     min-height: 100vh;
     width: 100%;
-    /* background: url(../images/2.jpg)no-repeat; */
+    background: url(../images/2.jpg)no-repeat;
     background-size: cover;
     background-position: center;
 }
