--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,12 @@ header{
     width: 100%;
     padding: 30px 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     background-color: rgba(227, 242, 255, 0.192);
 }
 
-header .logo{
+/* header .logo{
     position: relative;
     color: #fff;
     font-size: 30px;
@@ -42,12 +42,12 @@ header .logo{
     text-transform: uppercase;
     font-weight: 800;
     letter-spacing: 1px;
-}
+} */
 
-.navigation{
+/* .navigation{
     display: flex;
     justify-content: flex-end;
-}
+} */
 
 .navigation a{
     color: rgb(255, 255, 255);
@@ -141,15 +141,16 @@ h2{
 
 .course_card{
     display: flex;
+    flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 20%;
+    width: 15%;
     border-radius: 5px;
     margin: 20px;
 }
 
 .course_card img{
-    border-radius: 0 5px 5px 0;
+    border-radius: 5px 5px 0 0;
     overflow: hidden;
 }
 
