--- a/css/style.css
+++ b/css/style.css
@@ -141,11 +141,73 @@ header .nameline{
     margin-right: 60px;
 }
 
-/* .content{
+#about{
     display: flex;
-    /* flex: 1 1 500px; 
-    justify-content: center;
+    flex: 1 ;
+}
+
+/* .about-image{
+    display: flex;
+    flex: 30%;
+    /* max-width: 30%; 
+    min-height: 100vh;
+    background: black;
 } */
+
+.about-image {
+    display: flex;
+    flex: 30%;
+    min-height: 100vh;
+    background: linear-gradient(-45deg, #a1a0a0, #393a39, #b0adb1, #000705);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.about-content{
+    display: flex;
+    flex: 70%;
+    flex-direction: column;
+    background: black;
+    color: white;
+    justify-content: center;
+    font-style: italic;
+}
+
+.about-heading{
+    font-size: 70px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+    position: relative;
+    animation:example 5s infinite;
+}
+
+@keyframes example {
+    0%   {left:0px; top:-200px;}
+    /* 50%  {left:0px; top:0px;}
+    %  {left:0px; top:-300px;} */
+    100% {left:0px; top:0px;}
+  }
+
+.about-description{
+    font-family: cursive;
+    font-size: 20px;
+    margin-left: 30px;
+    max-width: 80%;
+    text-align: justify;
+    text-justify: inter-word;
+}
 
 .online_certificates{
     display: flex;
