--- a/css/style.css
+++ b/css/style.css
@@ -190,15 +190,13 @@ header .nameline{
     margin-left: 30px;
     margin-bottom: 10px;
     position: relative;
-    animation:example 5s infinite;
+    animation:about-name 5s infinite;
 }
 
-@keyframes example {
+@keyframes about-name {
     0%   {left:0px; top:-200px;}
-    /* 50%  {left:0px; top:0px;}
-    %  {left:0px; top:-300px;} */
     100% {left:0px; top:0px;}
-  }
+}
 
 .about-description{
     font-family: cursive;
@@ -215,12 +213,13 @@ header .nameline{
     justify-content: center;
     align-items: center;
     padding: 20px;
+    margin-top: 30px;
 }
 
 h2{
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-weight: 900;
+    font-weight: 750;
     font-size: xx-large;
+    color: rgb(70, 71, 71);
 }
 
 .online_certificates h3{
@@ -248,17 +247,21 @@ h2{
 
 .course_card{
     display: flex;
-    flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 15%;
+    width: 60%;
     border-radius: 5px;
     margin: 20px;
 }
 
 .course_card img{
-    border-radius: 5px 5px 0 0;
+    border-radius: 0 5px 5px 0;
     overflow: hidden;
+}
+
+.course_card a{
+    display: flex;
+    align-items: center;
 }
 
 .card {
