--- a/css/style.css
+++ b/css/style.css
@@ -222,17 +222,16 @@ h2{
     color: rgb(70, 71, 71);
 }
 
-.online_certificates h3{
+/* .online_certificates h3{
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-weight: 900;
     font-size: x-large;
-}
+} */
 
 .online_certificates a{
-    color: rgb(7, 16, 138);
+    color: rgb(70, 71, 71);
     text-decoration: none;
     font-weight: 500;
-    /* letter-spacing: 1px; */
     padding: 8px 15px;
     border-radius: 20px;
     transition: 0.3s;
@@ -267,13 +266,13 @@ h2{
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 33%;
+    width: 30%;
     border-radius: 5px;
-    margin: 20px;
+    margin: 50px;
 }
 
 .card:hover {
-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .card img{
@@ -289,7 +288,7 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .card_link{
-    color: rgb(7, 16, 138);
+    color: rgb(70, 71, 71);
     text-decoration: none;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
@@ -299,6 +298,7 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
 }
 
 .project_content{
